[package]
name = "type_uid"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "Evgenii Nekhoroshev evgnekhoroshev@gmail.com"
repository = "https://github.com/evnekdev/type_uid"
description = "A procedural macro to generate stable type-based unique identifiers (fingerprints) for Rust structs, useful for serialization compatibility and versioning."
keywords = ["procedural-macro", "serialization", "hashing", "typeid", "fingerprint"]
categories = [
    "development-tools::procedural-macro-helpers",
    "encoding",
    "algorithms",
    "data-structures"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
blake3 = "1"